[workspace]
members = [
    "xllm",
    "xllm-proxy", 
]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
authors = ["Trevor Seibert"]
license = "MIT"
repository = "https://github.com/hydrafusion/xllm"

[workspace.dependencies]
clap = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.23"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
indicatif = "0.17.11"
regex = "1.11.1"
dirs = "5.0"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
url = "2.5"
