[package]
name = "xllm-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TCP proxy server with AES-256-GCM encryption for xllm"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros"] }
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
aes-gcm = "0.10"
rand = "0.8"
