[package]
name = "xllm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI for interacting with LLMs"

[[bin]]
name = "xllm"
path = "src/main.rs"

[dependencies]
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
termimad.workspace = true
tokio.workspace = true
anyhow.workspace = true
toml.workspace = true
indicatif.workspace = true
regex.workspace = true
dirs.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
xllm-proto = { path = "../xllm-proto" }
