[package]
name = "xllm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A CLI for interacting with LLMs"

[[bin]]
name = "xllm"
path = "src/main.rs"

[dependencies]
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
termimad.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
anyhow.workspace = true
toml.workspace = true
indicatif.workspace = true
regex.workspace = true
dirs.workspace = true
aes-gcm = "0.10"
rand = "0.8"
url = "2.5"
